samples/_failures_safe/1761648313_2fdcbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff669f62.c: In function ‘main’:
./samples/SAFE/__tmp_ff669f62.c:144:16: error: ‘EXIT’ undeclared (first use in this function)
  144 |         return EXIT
      |                ^~~~
./samples/SAFE/__tmp_ff669f62.c:144:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ff669f62.c:144:20: error: expected ‘;’ at end of input
  144 |         return EXIT
      |                    ^
      |                    ;
./samples/SAFE/__tmp_ff669f62.c:144:9: error: expected declaration or statement at end of input
  144 |         return EXIT
      |         ^~~~~~
./samples/SAFE/__tmp_ff669f62.c:144:9: error: expected declaration or statement at end of input
